dclone package version history

Version 1.3-4, July 9, 2011
    * snowWrapper: cleanup=TRUE cleans up after lib adn dir args, too.

Version 1.3-3, May 13, 2011
    * *.parfit: write model to hard drive only if
      cluster type is SOCK (shared memoty)
    * snowWrapper: dir=NULL is set as the default.
    * mcmcapply functions simplified, FUN can be missing.
    * jags.parfit help notes that there is no update method
      for parallel mcmc.list objects.
    * snowWrapper got cleanup=TRUE argument to remove
      data after evaluating main function.

Version 1.3-2, March 2, 2011
    * Partial argument match fixed (NOTE from R CMD CHECK).
    * write.jags.model got new argument overwrite=FALSE.
    * Typo in rng.type argument of snowWrapper fixed.
    * plotClusterSize: col arg is reordered according to
      balancing type.

Version 1.3-1, January 4, 2011
    * JASA paper (Lele et al. 2010) citation added to Rd.
    * loading rjags changed: it is now only suggested.
      Reason: some dclone functionality might be useful
      without JAGS/rjags present, and now loading
      rjags won't cause error if JAGS shared library
      not found.
    * glm module not loading at startup because
      it cannot be nicely unloaded in parallel versions.
    * dcoptions RNG got "none" value as default,
      *.parfit functions use dcoptions for snowWrapper.
      As a result, dependencies changed a bit.
    * dc.parfit: none/both balancing fixed (were switched).

Version 1.3-0, December 31, 2010
    * preparing for major CRAN release.
    * final RJ citation added.

Version 1.2-3, December 16, 2010
    * bugs.parfit: migrated into the new dcextras package
      where experimental and not fully supported functions
      will reside in the future.

Version 1.2-2, October 21, 2010
    * expanded examples for *.parfit functions.
    * clusterSeed removed from package: use
      clusterSetupRNG in snow instead.

Version 1.2-1, August 26, 2010
    * experimenting with bugs.parfit: