@@ -33,6 +33,7 @@ Tags are the following:
   \item{RNG}{parallel RNG type, either 
     \code{"none"} (default), \code{"RNGstream"} or \code{"SPRNG"},
     see \code{\link[snow]{clusterSetupRNG}}.}
+  \item{overwrite}{logical, should existing model file be overwitten, default is \code{FALSE}.}
 }
 \author{
 Peter Solymos <solymos@ualberta.ca>
